<resources>
    <string name="app_name">AndroidAssignment1</string>
    <string name="activityB">Activity B</string>
    <string name="finishb">Finish B</string>
    <string name="th_ctr">Thread Counter</string>
    <string name="th_ctr_val"></string>
    <string name="close">Close</string>
    <string name="closeapp">Close App</string>
    <string name="activityA_text">Start Activity</string>
    <string name="activityB_text">Activity B occupies the complete window real-estate.The Android OS forces Activity A to be paused.However the background thread kepps incrementing the counter </string>
</resources>
