<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context="com.cmpe277.yaminimuralidharen.androidassignment1.ActivityB">
    <ImageView
        android:id="@+id/bimgview1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sjsu_logo"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityB"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/bimgview1"
        android:paddingLeft="20dp"
        />
    <TextView
        android:id="@+id/btextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityB_text"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/bimgview1"
        android:layout_centerHorizontal="false"
        android:textSize="25sp"
        android:paddingLeft="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishb"
        android:onClick="closeActivity"
        android:textColor="#fff"
        android:layout_below="@+id/btextview"
        android:background="#000000"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
