<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="10dp"
android:background="#03536d"
    tools:context="com.cmpe277.yaminimuralidharen.androidassignment1.MainActivity">

    <ImageView
        android:id="@+id/imgview1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sjsu_logo"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityA_text"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/imgview1"
        android:layout_centerHorizontal="false"
        android:textSize="25sp"
        android:paddingLeft="20dp"
       />

    <Button
        android:id="@+id/activitybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgview1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:background="#ffff00"
        android:layout_centerHorizontal="true"
        android:text="Activity B"
         />
    <Button
        android:id="@+id/dialogbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgview1"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/activitybutton"
        android:background="#ffff00"
        android:layout_marginLeft="10dp"
        android:text="Dialog"/>

    <TextView
        android:id="@+id/thcountstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th_ctr"
        android:textColor="#ffffff"
        android:layout_below="@+id/dialogbutton"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/thcountstringval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/dialogbutton"
        android:layout_toRightOf="@+id/thcountstring"
        />
    <View
        android:id="@+id/lineview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/thcountstringval"
        android:background="@android:color/white" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closeapp"
        android:textColor="#fff"
        android:layout_below="@+id/lineview"
        android:background="#000000"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:onClick="closeActivityA"
        />

</RelativeLayout>
